<resources>
    <string name="app_name">Thesis</string>
    <string name="start">Start Game</string>
    <string name="settings">Settings</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="background_music">Background Music</string>
    <string name="scores">Scores</string>
    <string name="statistics">Statistics</string>
    <string name="category">Category</string>
    <string name="play">Play</string>
    <string name="return_to_game">Return to Game</string>
    <string name="exit_game">Exit Game</string>
    <string name="pause">Pause</string>
    <string name="wip">Work In Progress</string>
    <string name="applogo">APPlogo</string>
    <string name="olfulogo">OLFUlogo</string>
    <string name="ccslogo">CCSlogo</string>
    <string name="olfu">Our Lady of Fatima University</string>
    <string name="ccs">College of Computer Studies</string>
</resources>
